[package]
name = "arbor"
description = "A terminal-based file manager for Linux, inspired by Yazi and Ranger, featuring a three-pane layout and Vim-style keybindings."
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/vishalkrkamat/Arbor"
keywords = ["file-manager", "terminal", "tui", "cli", "rust"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.28.1"
hex = "0.4.3"
ratatui = "0.29.0"

[workspace.metadata.clippy]
warn = ["clippy::all", "clippy::pedantic", "clippy::nursery"]
