[package]
name = "arbor"
description = "A terminal-based file manager for Linux, inspired by Yazi and Ranger, featuring a three-pane layout and Vim-style keybindings."
version = "0.2.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/vishalkrkamat/Arbor"
keywords = ["file-manager", "terminal", "tui", "cli", "rust"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.99"
crossterm = "0.28.1"
hex = "0.4.3"
mime_guess = "2.0.5"
ratatui = "0.29.0"
tokio = {version = "1.45.1",features = ["full"] }
zip = "4.2.0"

[workspace.metadata.clippy]
warn = ["clippy::all", "clippy::pedantic", "clippy::nursery"]
